# sprite-game

./: Cargo.toml  LICENSE.md  README.md
resources/: binding_config.ron  display_config.ron
src/: character.rs  characteranimation.rs  charactermeta.rs  charactermove.rs  damage.rs  delayedremove.rs  forces.rs  helper.rs  main.rs  map.rs  physics.rs  randomparticles.rs  room.rs  roomexit.rs  simpleenemy.rs  spriteanimation.rs  spriteanimationloader.rs  swordattack.rs
texture/: Ground0.ron  animations.ron  healer_f.ron  test2.ron  tp-export.ron
texture-packer-exporter/: exporter.xml  template.xml
texture/healer_f/: test.tps
