[package]
name = "sprite-game"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
#amethyst = {version="0.13", features=["profiler"]}
amethyst = {version="0.13"}
#amethyst = {version="0.13", path="../amethyst"}
nalgebra = "0.18.1"
serde = "1.0"
regex = "1.3"
rand = "0.7"



[features]
default = ["metal"]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
profiler = ["amethyst/profiler"]