[package]
name = "sprite-game"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
#amethyst = {version="0.13", features=["profiler"]}
amethyst = {version="0.15"}
#amethyst = {version="0.13", path="../amethyst"}
nalgebra = "0.21"
serde = "1.0"
regex = "1.3"
rand = "0.7"
env_logger = "0.7"
log = "0.4"
specs-physics = { git = "https://github.com/neosam/specs-physics", branch = "my-game-state", features = ["amethyst"] }
#specs-physics = { path = "../specs-physics", features = ["amethyst"] }



[features]
default = ["metal"]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
profiler = ["amethyst/profiler"]